recursion.lessons.recursion.koch.Koch.scala.error
Koch:20: error: not found: value backwards
		backwards(length)
                ^